--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,7 @@
   </head>
   <body>
     <h1>Haikus for Mona</h1>
+    <h2>Hello World!!!!!</h2>
     <div>
       <% for(var i=0; i < haikus.length; i++) { %>
         <img
